Put events back to master + more UI changes
1. class events can be found now
2. More minor UI changes on client

--- a/Client/ClientSide.csproj
+++ b/Client/ClientSide.csproj
@@ -50,6 +50,7 @@
     <Compile Include="client-master.Designer.cs">
       <DependentUpon>client-master.cs</DependentUpon>
     </Compile>
+    <Compile Include="event.cs" />
     <Compile Include="newevent.cs">
       <SubType>Form</SubType>
     </Compile>
